# code-scalpel

./: .gitignore  CLAUDE.md  CREDITS.md  DEVELOPING.md  LICENSE  README.md  pyproject.toml
.code-scalpel/: INDEX.json
.github/workflows/: ci.yml  release.yml
code_scalpel/: __init__.py  __main__.py  agent.py  classifier.py  cli.py  clipboard.py  config.py  context_compress.py  context_report.py  diagrams.py  fetch.py  fork.py  i18n.py  jobs.py  learn.py  memory.py  narrow_pass.py  plan.py  policy.py  project_map.py  recipes.py  runtime.py  session.py  state.py  upstream_queue.py  workspace.py
code_scalpel/checks/: __init__.py  empty_tests.py  import_graph.py  lint_pass.py
code_scalpel/index/: __init__.py  builder.py  model.py  parser.py  retrieve.py  shape.py  signatures.py  walkers.py
code_scalpel/llm/: adapter.py  cancel.py  lmstudio_native.py  lmstudio_status.py  lmstudio_swap.py  native_events.py
code_scalpel/locale/: en.yaml  ru.yaml
code_scalpel/mermaid/: __init__.py  classes.py  layout.py  parser.py  render.py  sequence.py
code_scalpel/patch/: applier.py  edit_block.py  normalizer.py  parser.py  validator.py
code_scalpel/prompts/: __init__.py  annotate_skills.md  commit_message.md  debug_pass.md  detect_forks.md  fork_clarify.md  fork_local_meta.md  fork_reviewer.md  mode_code.md  mode_debug.md  mode_plan.md  mode_review.md  per_step_review.md  system.md  test_sanity.md
code_scalpel/prompts/retry/: apply_failed.md  force_answer.md  missing_files.md  needs_tests.md  read_before_show.md  tests_failed.md
code_scalpel/skills/: __init__.py  base.py  docker_skill.py  go_skill.py  js_skill.py  postgres_skill.py  python_skill.py  registry.py  sqlite_skill.py
code_scalpel/tools/: agent_tools.py  files.py  git.py  sandbox.py  search.py  shell.py  tests.py
code_scalpel/tui/: app.py  styles.tcss  theme.tcss
code_scalpel/tui/widgets/: _map_highlight.py  footer.py  input.py  jobs_bar.py  jobs_modal.py  mermaid_card.py  output.py  plan_card.py  tool_result_modal.py  tool_use.py  turn_progress.py
code_scalpel/tui/widgets/cards/: choice.py  operation.py  shell_exec.py  tool_call.py
docs/: article_draft.md  bench-models.md  bench-v0.1.md  plan.md  prompts.md
docs/article/: README.md  critic_notes.md  critic_series.md  v1_devlog.md
docs/article/probe-runs/: INDEX.md
docs/article/probe-runs/a_diag_plan-mini_cli-bca504e-20260513-145240/: chat.jsonl  evaluation.md  meta.json  metrics.json  timing.jsonl  tools.jsonl  user_plan.md  verdict.json
docs/article/probe-runs/c_fix_bug-mini_cli_with_bug-00916ae-20260513-145908/: chat.jsonl  evaluation.md  meta.json  metrics.json  timing.jsonl  tools.jsonl  user_plan.md  verdict.json
docs/article/probe-runs/c_fix_bug-mini_cli_with_bug-450cf87-20260513-153012/: chat.jsonl  evaluation.md  meta.json  metrics.json  scenario.md  timing.jsonl  tools.jsonl  user_plan.md  verdict.json
docs/article/probe-runs/c_fix_bug-mini_cli_with_bug-a392a2e-20260513-160019/: chat.jsonl  evaluation.md  meta.json  metrics.json  timing.jsonl  tools.jsonl  user_plan.md
docs/article/probe-runs/c_fix_bug-mini_cli_with_bug-ad51ab8-20260513-144155/: chat.jsonl  evaluation.md  meta.json  metrics.json  notes.md  timing.jsonl  tools.jsonl  user_plan.md
docs/article/probe-runs/c_fix_bug-mini_cli_with_bug-ad51ab8-20260513-144155/final_tree/: pyproject.toml
docs/article/probe-runs/c_fix_bug-mini_cli_with_bug-ad51ab8-20260513-144155/final_tree/mini_cli/: core.py
docs/article/probe-runs/notes_cli-notes_cli_empty-1a7c385-20260513-200643/: chat.jsonl  evaluation.md  meta.json  metrics.json  timing.jsonl
docs/article/probe-runs/notes_cli-notes_cli_empty-46ab8bc-20260514-201759/: chat.jsonl  meta.json  metrics.json  timing.jsonl
docs/article/probe-runs/notes_cli-notes_cli_empty-58b43fc-20260514-202703/: chat.jsonl  meta.json  metrics.json  timing.jsonl  tools.jsonl
docs/article/probe-runs/notes_cli-notes_cli_empty-58b43fc-20260514-203025/: chat.jsonl  meta.json  metrics.json  timing.jsonl  tools.jsonl
docs/article/probe-runs/notes_cli-notes_cli_empty-9ae0968-20260514-181604/final_tree/: pyproject.toml
docs/article/probe-runs/notes_cli-notes_cli_empty-9ae0968-20260514-181604/final_tree/notes_app/: cli.py  storage.py
docs/article/probe-runs/notes_cli-notes_cli_empty-9ae0968-20260514-181604/final_tree/tests/: test_storage.py
docs/article/probe-runs/notes_cli-notes_cli_empty-b8f264f-20260514-192935/final_tree/: pyproject.toml  pytest.ini
docs/article/probe-runs/notes_cli-notes_cli_empty-eb5ee2f-20260514-153300/final_tree/: notes.py  pyproject.toml
docs/article/probe-runs/notes_cli-notes_cli_empty-eb5ee2f-20260514-153300/final_tree/tests/: test_notes.py
docs/methodology/: outcome-driven-release.md
packaging/: nfpm.yaml
scripts/: __init__.py  bench_full_vs_overview.py  figures.py  poc_test.py  probe.py  probe_code.py  probe_e2e_forks.py  probe_fork_reviewer.py  probe_forks.py  probe_recipes.py  spy_flow.py
scripts/probes_v2/: HISTORICAL_PLAYBOOK.md  PROTOCOL.md  __init__.py  build_figures.py  cli.py  daemon.py  ipc.py  legacy_pack.py  logging_adapter.py  state.py
scripts/probes_v2/scenarios/: a_diag_plan.md  c_fix_bug.md
tests/: conftest.py  mocks.py  test_agent.py  test_agent_tools.py  test_app.py  test_bench_full_vs_overview.py  test_cancel.py  test_cards.py  test_classifier.py  test_cli.py  test_cli_init.py  test_config.py  test_context_compress.py  test_context_report.py  test_diagrams.py  test_edit_block.py  test_empty_tests.py  test_fetch.py  test_files.py  test_footer.py  test_fork.py  test_git.py  test_i18n.py  test_import_graph.py  test_input.py  test_jobs.py  test_jobs_bar.py  test_jobs_modal.py  test_learn.py  test_lint_pass.py  test_llm_adapter.py  test_llm_bench.py  test_lmstudio_native.py  test_lmstudio_status.py  test_lmstudio_swap.py  test_memory.py  test_mermaid_card.py  test_mermaid_classes.py  test_mermaid_layout.py  test_mermaid_parser.py  (+24 more)
tests/test_index/: test_builder.py  test_constants.py  test_model.py  test_retrieve.py  test_shape.py  test_signatures.py  test_walkers.py
(+344 files in other folders)
