[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-scalpel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "openai>=1.30",
    "unidiff>=0.7",
    "pathspec>=0.12",
]

[project.scripts]
code-scalpel = "code_scalpel.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "types-PyYAML",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["code_scalpel"]
omit = ["tests/*"]
