[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-scalpel"
version = "0.7.0"
description = "TUI coding agent for precise work with code through weak local LLMs"
license = "AGPL-3.0-or-later"
authors = [{ name = "Alexander Degtyarev" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "textual-autocomplete>=4.0",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "openai>=1.30",
    "unidiff>=0.7",
    "pathspec>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tree-sitter~=0.25",
    "tree-sitter-python~=0.25",
    "html2text>=2024.2.26",
]

[project.scripts]
code-scalpel = "code_scalpel.cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "types-PyYAML",
]
# Inline rendering of ```mermaid``` blocks the model emits. Requires the
# Mermaid CLI (`npm i -g @mermaid-js/mermaid-cli`) on PATH for the PNG
# step; rich-pixels then draws the PNG as Unicode half-blocks. Без обоих
# мы фоллбэчимся на raw текст блока в карточке — TUI работает, картинки
# нет.
diagrams = [
    "rich-pixels>=3.0",
]
# Standalone-binary build tooling. The release workflow installs
# `[build]` alongside `[dev,diagrams]` so PyInstaller sees all the
# optional deps it needs to bundle. Locally `pip install -e ".[build]"`
# lets you reproduce CI's binary on your machine.
build = [
    "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "llm: hits a real local LLM via LM Studio; slow and non-deterministic. Run with --run-llm.",
]

[tool.coverage.run]
source = ["code_scalpel"]
omit = ["tests/*"]
