[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-cli"
version = "0.1.0"
description = "Todo-list CLI — probe fixture для code-scalpel"
requires-python = ">=3.11"
dependencies = ["typer>=0.12"]

[project.scripts]
mini-cli = "mini_cli.__main__:app"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["mini_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
