[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notes-cli"
version = "0.0.0"
description = "Probe fixture — стартовый каркас для построения notes-CLI с нуля"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
